--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "browserify": "^15.0.0",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
     "vinyl-source-stream": "^2.0.0"
   }
 }
