add first javascript function. first spec passed when a user enters their age it will convert that number and return to the user their age in seconds.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "space-age",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "gulpfile.js",
   "scripts": {
     "test": "karma start karma.conf.js"
   },
@@ -33,5 +33,6 @@
     "karma-jquery": "^0.2.2",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.9.0"
-  }
+  },
+  "dependencies": {}
 }
